feat(contract): clientes Java y Python generados, y la entidad deja de publicarse
Se completan los modulos client-java y client-python, generados desde el
contrato en cada build. Un generador que hay que acordarse de lanzar a mano
produce clientes desfasados, y el desfase no se nota hasta que un consumidor
falla.

No se comparten los DTOs del servidor a proposito: si un consumidor dependiera
del jar de app, arrastraria Spring Boot, JPA y las entidades, y quedaria atado a
la misma version de Boot y de Java que el servidor. Generando desde el contrato,
el unico acuerdo es el contrato.

El cliente Java usa RestClient y no RestTemplate, cuya autoconfiguracion retiro
Spring Boot 4. El paquete Python lleva nombre fijo porque los paquetes de Python
no admiten guiones y un artifactId con guion generaria uno invalido.

Y construirlos destapo el coste real de un antipatron que estaba anotado como
pendiente: el controlador devolvia la ENTIDAD JPA. Eso la colaba en el contrato
y, desde ahi, en todos los clientes generados — el cliente Java traia una clase
MyTable con la forma exacta de la tabla. Publicar la entidad convierte cualquier
cambio del esquema en un cambio de la API publica.

Arreglado de punta a punta: el servicio y el controlador devuelven DTOs, y una
regla nueva de ArchUnit (los_controladores_no_exponen_entidades) impide que
vuelva a colarse. Los clientes ahora generan MyTableResponse.

OpenRewrite en el pom padre, sin executions: se lanza a mano para migraciones.
Mas alla del valor inmediato, es el primer paso hacia la via de actualizacion
que a los arquetipos les falta (D4): un arquetipo genera y se olvida, pero una
receta se puede ejecutar sobre un proyecto ya generado.

Dos comprobaciones nuevas en el gate (ya son 8): C7 el contrato viaja y no
publica entidades, C8 los clientes generan codigo de verdad — un generador mal
configurado no falla, simplemente no genera nada y el consumidor se encuentra un
jar sin clases.

Co-Authored-By: Claude Opus 5 <noreply@anthr